# Akr-Node

./: README.md  package.json  tsconfig.json
Frammer/: README.md  pyproject.toml  scraper.py
Frammer/output/: components.csv  components.xlsx
LandingSite/: build.ts  llms.txt  package.json  robots.txt  sitemap.xml
LandingSite/src/: App.tsx  index.css  index.html  index.ts
LandingSite/src/pages/: Docs.tsx
Skill-Perfection/: AKR-Designperfection-Skill.md  README.md  setup-frammer-csv.sh
Skill-Perfection/akr-design-perfection-FINAL/akr-design-perfection/: AKR-Designperfection-Skill.md  _meta.json
cli/create-akr/: create-akr-1.0.0.tgz  index.js  package.json  templates.json
create-akr/: README.md  index.js  package.json
src/: App.tsx  index.html
src/components/sections/: FAQ.tsx  FeaturesGrid.tsx
src/components/ui/: Section.tsx
src/constants/: index.ts
templates/: templates.json
templates/Dashboard/: package.json  tailwind.config.js
templates/Documentation/: package.json
templates/Documentation/src/: index.css
templates/E-commerce/scripts/: download-images.ts
templates/bun-basic/: README.md  package.json
templates/bun-react/: package.json
templates/bun-react-tailwind/: package.json
templates/dashboard/src/: App.tsx  index.css  index.html
templates/documentation/src/: App.tsx  index.html
templates/ecommerce/src/: App.tsx  index.css  index.html
templates/portfolio/: README.md  package.json  scratch_rm.js  vite.config.ts
templates/portfolio/src/: App.tsx
templates/saas/: index.html  package.json  tsconfig.json  vite.config.ts
(+58 files in other folders)
