[project]
name = "framer-scraper"
version = "0.1.0"
description = "Scrape free Framer Marketplace components (copy-link, thumbnail, page link) to Excel/CSV"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.45",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "requests>=2.32",
]

[tool.uv]
package = false
